# Chess-Engine

./: BoardRepresentation.cpp  BoardRepresentation.h  CMakeLists.txt  README.md  constants.h  engineFunctions.cpp  engineFunctions.h  gameClass.cpp  gameClass.h  main.cpp  myprogram
Engine/: moveSearch.cpp  moveSearch.h
GameOutput/: constants.h  gameClass.cpp  gameClass.h
pieces/: basePiece.cpp  basePiece.h  bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  padding.h  pawn.cpp  pawn.h  pieceMovement.cpp  pieceMovement.h  queen.cpp  queen.h  rook.cpp  rook.h
